# app/Http/Controllers/Controller.php
@@ -8,17 +8,8 @@ use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 use Illuminate\Pagination\LengthAwarePaginator as Paginator;
 
-/**
- *@OA\Info(
- *     version="1.0.0",
- *     title="又东风小程序后台 Api 文档",
- *     description="又东风小程序后台 Api 文档"
- * )
- * @OA\Link (
- *     link="http://ydf_mall.test",
- *     server="http://"
- * )
- */
+
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
@@ -43,3 +34,43 @@ class Controller extends BaseController
 
     }
 }
+
+/**
+ *@OA\Info(
+ *     version="1.0.0",
+ *     title="又东风小程序后台 Api 文档",
+ *     description="又东风小程序后台 Api 文档",
+ * )
+ * @OA\Server(
+ *      url="/admin-api/admin",
+ *      description="普通接口地址"
+ * )
+ * @OA\Server(
+ *      url="/admin-api",
+ *      description="通用接口地址"
+ * )
+ * @OA\Parameter(
+ *   parameter="current_page",
+ *   name="current_page",
+ *   description="当前页",
+ *   @OA\Schema(
+ *     type="integer",
+ *     format="int64",
+ *     default=1
+ *   ),
+ *   in="path",
+ *   required=true
+ * )
+ * @OA\Parameter(
+ *   parameter="per_page",
+ *   name="per_page",
+ *   description="每页显示数量",
+ *   @OA\Schema(
+ *     type="integer",
+ *     format="int64",
+ *     default=10
+ *   ),
+ *   in="path",
+ *   required=true
+ * )
+ */
