# storage/api-docs/api-docs.json
@@ -5,6 +5,16 @@
         "description": "又东风小程序后台 Api 文档",
         "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "/admin-api/admin",
+            "description": "普通接口地址"
+        },
+        {
+            "url": "/admin-api",
+            "description": "通用接口地址"
+        }
+    ],
     "paths": {
         "/admin-api/admin/after": {
             "get": {
@@ -19,12 +29,390 @@
                     }
                 }
             }
+        },
+        "/spec": {
+            "get": {
+                "tags": [
+                    "属性"
+                ],
+                "summary": "获取属性列表",
+                "description": "返回属性列表",
+                "operationId": "getSpec",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/current_page"
+                    },
+                    {
+                        "$ref": "#/components/parameters/per_page"
+                    },
+                    {
+                        "name": "condition",
+                        "in": "query",
+                        "description": "类型名称",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "属性查询成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/spec"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "属性"
+                ],
+                "summary": "返回保存属性详情",
+                "description": "保存属性",
+                "operationId": "App\\Http\\Controllers\\Admin\\SpecController::store",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/spec_in_body"
+                },
+                "responses": {
+                    "200": {
+                        "description": "属性保存成功"
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            }
+        },
+        "/spec/{spec}": {
+            "get": {
+                "tags": [
+                    "属性"
+                ],
+                "summary": "返回ID所属属性",
+                "description": "通过ID查询属性",
+                "operationId": "App\\Http\\Controllers\\Admin\\SpecController::show",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/spec_in_path_required"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/spec"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            }
+        },
+        "spec/{spec}": {
+            "delete": {
+                "tags": [
+                    "属性"
+                ],
+                "summary": "返回状态",
+                "description": "删除属性",
+                "operationId": "App\\Http\\Controllers\\Admin\\SpecController::destroy",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/spec_in_path_required"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功"
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "属性"
+                ],
+                "summary": "返回更新的属性详情",
+                "description": "更新属性",
+                "operationId": "App\\Http\\Controllers\\Admin\\SpecController::update",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/spec_in_path_required"
+                    }
+                ],
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/spec_in_body"
+                },
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/spec"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "tags": [
+                    "用户"
+                ],
+                "summary": "获取用户列表",
+                "description": "返回用户列表",
+                "operationId": "getUser",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/current_page"
+                    },
+                    {
+                        "$ref": "#/components/parameters/per_page"
+                    },
+                    {
+                        "name": "mobile",
+                        "in": "query",
+                        "description": "手机号码",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sex",
+                        "in": "query",
+                        "description": "性别[1:男 2:女]",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "nickname",
+                        "in": "query",
+                        "description": "昵称",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "状态[1:正常, 2:禁用]",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "pid_mobile",
+                        "in": "query",
+                        "description": "推荐人手机号码",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "用户查询成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/user"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "页面未找到"
+                    }
+                }
+            }
+        },
+        "/user/status/{user}": {
+            "patch": {
+                "tags": [
+                    "用户"
+                ],
+                "summary": "修改用户状态",
+                "description": "修改用户状态",
+                "operationId": "App\\Http\\Controllers\\Admin\\UserController::status",
+                "parameters": [
+                    {
+                        "name": "user",
+                        "in": "path",
+                        "description": "用户ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/user_in_body"
+                },
+                "responses": {
+                    "200": {
+                        "description": "状态修改成功"
+                    }
+                }
+            }
         }
     },
     "components": {
-        "links": {
-            "http://ydf_mall.test": {
-                "server": "http://"
+        "schemas": {
+            "Spec": {
+                "title": "属性模型",
+                "description": "属性模型",
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "format": "string",
+                        "example": "内存"
+                    },
+                    "sort": {
+                        "type": "integer",
+                        "format": "integer",
+                        "example": 100
+                    },
+                    "details": {
+                        "type": "string",
+                        "format": "string",
+                        "nullable": true
+                    },
+                    "values": {
+                        "description": "@OA\\Property(format=\"string\",example={34,35})",
+                        "format": "string",
+                        "example": [
+                            34,
+                            35
+                        ]
+                    }
+                },
+                "type": "object"
+            },
+            "User": {
+                "title": "用户模型",
+                "description": "用户模型",
+                "properties": {
+                    "status": {
+                        "$ref": "#/components/schemas/user_status"
+                    }
+                },
+                "type": "object"
+            },
+            "user_status": {
+                "description": "用户状态[1:正常,2:黑名单]",
+                "type": "integer",
+                "default": 1,
+                "enum": [
+                    1,
+                    2
+                ]
+            }
+        },
+        "responses": {
+            "spec": {
+                "description": "属性信息",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Spec"
+                        }
+                    }
+                }
+            },
+            "user": {
+                "description": "返回用户信息",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/User"
+                        }
+                    }
+                }
+            }
+        },
+        "parameters": {
+            "current_page": {
+                "name": "current_page",
+                "in": "path",
+                "description": "当前页",
+                "required": true,
+                "schema": {
+                    "type": "integer",
+                    "format": "int64",
+                    "default": 1
+                }
+            },
+            "per_page": {
+                "name": "per_page",
+                "in": "path",
+                "description": "每页显示数量",
+                "required": true,
+                "schema": {
+                    "type": "integer",
+                    "format": "int64",
+                    "default": 10
+                }
+            },
+            "spec_in_path_required": {
+                "name": "spec",
+                "in": "path",
+                "description": "属性ID",
+                "required": true,
+                "schema": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "requestBodies": {
+            "spec_in_body": {
+                "description": "属性表单数据",
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Spec"
+                        }
+                    }
+                }
+            },
+            "user_in_body": {
+                "description": "用户表单数据",
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/User"
+                        }
+                    }
+                }
             }
         }
     }
